:art: Added responsivity for tablet&desktop

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				</ul>
 				<button class="checkoutBtn">Proceed to checkout</button>
 			</div>
-			<input type="text" class="navSearchBar" />
+			<input type="text" class="navSearchBar" placeholder="Search"/>
 			<button id="filterBtn" class="sortBtn">
 				<img src="Assets/icons/Filter.svg" alt="" height="30" width="50" />
 			</button>
@@ -242,7 +242,7 @@
 			<div>
 				<ul class="productCheckoutSummary">
 					<li class="productAdded">
-						<p>No products in card :/</p>
+						<p>No products in cart :/</p>
 					</li>
 				</ul>
 			</div>
