:wrench: Tweaked image format

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <header>
     <figure class="headerLogo">
-      <img src="Assets/icons/lightThemeLogo.svg" class="logoColor" alt="elegant roses logo in yellow"/>
+      <img src="Assets/icons/lightThemeLogo.svg" class="logoColor" alt="elegant roses logo in yellow" width="200" height="100"/>
       <h1 class="headerLogoText">Elegant Roses</h1>
     </figure>
     <nav class="navBar">
@@ -193,19 +193,19 @@
       </h2>
       <div class="reviewsContainer">
         <article class="reviews">
-          <img src="Assets/Images/Reviews/Review1.jpg" alt="girl holding box of flowers" height="300" width="300" />
+          <img src="Assets/Images/Reviews/Review1.webp" alt="girl holding box of flowers" height="300" width="300" />
           <h3>"The flower box exceeded all expectations – pure elegance."</h3>
         </article>
         <article class="reviews">
-          <img src="Assets/Images/Reviews/Review2.jpg" alt="man holding box of flowers" height="300" width="300" />
+          <img src="Assets/Images/Reviews/Review2.webp" alt="man holding box of flowers" height="300" width="300" />
           <h3>"Beautifully arranged flowers, a gift that speaks volumes."</h3>
         </article>
         <article class="reviews">
-          <img src="Assets/Images/Reviews/Review3.jpg" alt="man holding box of flowers" height="300" width="300" />
+          <img src="Assets/Images/Reviews/Review3.webp" alt="man holding box of flowers" height="300" width="300" />
           <h3>"An elegant touch to any occasion – the perfect gift."</h3>
         </article>
         <article class="reviews">
-          <img src="Assets/Images/Reviews/Review4.jpg" alt="girl sitting next to box of flowers" height="300" width="300" />
+          <img src="Assets/Images/Reviews/Review4.webp" alt="girl sitting next to box of flowers" height="300" width="300" />
           <h3>
             "A touch of romance delivered in a stylish box – simply divine."
           </h3>
