:wrench: Tweak images format

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <meta name="twitter:site" content="@elegantroses">
 
   <link rel="stylesheet" href="css/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700&display=swap" rel="stylesheet">
+  
 </head>
 <body>
   <header>
@@ -163,24 +164,24 @@
       </h2>
       <ul class="instructionList">
         <li>
-          <img src="Assets/icons/1Choose.png" alt="two round flower boxes icon" width="150" height="150">
+          <img src="Assets/icons/1Choose.png" alt="two round flower boxes icon" width="150" height="150" loading="lazy">
           <h3>Select Symbols of Eternal Love:</h3>
           <p>Explore our diverse collection of timeless roses each a unique expression of enduring love.</p>
         </li>
         <li>
-          <img src="Assets/icons/2Payment.png" alt="payment option icon" width="150" height="150">
+          <img src="Assets/icons/2Payment.png" alt="payment option icon" width="150" height="150" loading="lazy">
           <h3>Convenient Payment Options:</h3>
           <p>Enjoy a seamless checkout experience with our flexible payment methods, including card payments
             and hassle-free invoicing.</p>
         </li>
         <li>
-          <img src="Assets/icons/3Delivery.png" alt="delivery truck icon" width="150" height="120">
+          <img src="Assets/icons/3Delivery.png" alt="delivery truck icon" width="150" height="120" loading="lazy">
           <h3>Sit Back and Unwind:</h3>
           <p>While we handle the delivery, take a moment to relax and savor life. Our sustainable delivery
             methods ensure a conscientious service.</p>
         </li>
         <li>
-          <img src="Assets/icons/4Enjoy.png" alt="a flower box icon with hearts sparking" width="150" height="150">
+          <img src="Assets/icons/4Enjoy.png" alt="a flower box icon with hearts sparking" width="150" height="150" loading="lazy">
           <h3>Cherish the Extraordinary:</h3>
           <p>Gift your loved ones with a symbol of love like no other. ElegantRoses - A timeless emblem of
             eternity.</p>
