--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
     </ul>
     <div>
       <p>Elegant Roses® 2023</p>
-      <img src="Assets/icons/FooterLogo.svg" alt="white elegant roses logo in footer" width="100" height="64">
+      <img src="Assets/icons/FooterLogo.svg" alt="white elegant roses logo in footer" width="100" height="64" loading="lazy">
       <p>All Rights Reserved</p>
     </div>
   </footer>
